--- a/src/Component/Services/Galleryfit/galleryfit.css
+++ b/src/Component/Services/Galleryfit/galleryfit.css
@@ -11,7 +11,7 @@
     height: 100vh;
     top: 0;
     margin: auto;
-    background-color: rgba(100,100,100,0.9);
+    background-color: rgba(50,50,50,0.9);
     transition: opacity 0.3s;
 }
 
@@ -29,26 +29,41 @@
 
 .Galleryfit {
     position: absolute;
-    width: 95vw;
-    top: 1vh;
+    width: 70vw;
+    top: 2vh;
     left: 0;
     right: 0;
     margin: auto;
 }
 
-.Galleryfit img {
-    height: 20vh;
+.galleryPage {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.galleryPage img {
+    cursor: pointer;
+    height: 97%;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.5);
+    transition: 1s;
+    padding: 0;
+}
+
+.galleryPage img:hover {
+    border: 1px solid #fff;
+    box-shadow: 0 10px 30px -3px rgba(0, 0, 0, 0.65);
 }
 
 @media (min-width:1224px) {
 
     .galleryfitWindow {
         position: absolute;
-        width: 80vw;
-    }
-
-    .Galleryfit {
-        width: 80vw;
+        width: 70vw;
     }
 
 }
