--- a/src/Component/Services/Examples/examples.css
+++ b/src/Component/Services/Examples/examples.css
@@ -55,6 +55,7 @@
 .galleryPage img {
     height: 100%;
     box-shadow: 0 8px 14px -7px rgba(0, 0, 0, 0.75);
+    transition: all 0.5s ease;
 }
 
 .flexiCols {
@@ -69,6 +70,10 @@
 }
 
 .sliderContainer {
+    display: none;
+}
+
+.dropMarker {
     display: none;
 }
 
@@ -107,6 +112,18 @@
         background: var(--main-background-color);
         border-radius: 100%;
         cursor: pointer;
+    }
+
+    .parentMarker {
+        background-color: rgba(60, 176, 255, 0.2);
+    }
+
+    .beforeMarker {
+        border-left: 5px solid #3cb0ff;
+    }
+
+    .afterMarker {
+        border-right: 5px solid #3cb0ff;
     }
 
 }
